more properties, enable or disable mqtt, change name on ssl for mqtt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,9 +24,10 @@ ha.api.bearer-token=
 # MQTT properties
 mqtt.broker=192.168.2.135
 mqtt.qos=2
-mqtt.has.ssl=false
+mqtt.ssl.enabled=false
 mqtt.port=1883
 mqtt.username=testUserName
 mqtt.password=demoPassword
 mqtt.tcp=tcp://
 mqtt.ssl=ssl://
+mqtt.enabled=false
